--- a/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
+++ b/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
@@ -25,6 +25,7 @@
     <ApplicationInsightsResourceId>/subscriptions/b08e763f-d77e-48ab-b59c-1077af779a5c/resourcegroups/Default-ApplicationInsights-CentralUS/providers/microsoft.insights/components/Kartverket.Geonorge.Download</ApplicationInsightsResourceId>
     <UseGlobalApplicationHostFile />
     <TargetFrameworkProfile />
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -255,6 +256,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\CultureHelper.cs" />
     <Compile Include="Migrations\201610201300527_Initial.cs" />
     <Compile Include="Migrations\201610201300527_Initial.Designer.cs">
       <DependentUpon>201610201300527_Initial.cs</DependentUpon>
@@ -301,6 +303,7 @@
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\OrderItemStatus.cs" />
     <Compile Include="Models\OrderItem.cs" />
+    <Compile Include="Models\Translations\Culture.cs" />
     <Compile Include="Models\UpdateFileStatusInformation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AccessRestrictionException.cs" />
@@ -515,9 +518,6 @@
     <Content Include="bower.json" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="authentication.config" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="authentication.default.config" />
   </ItemGroup>
   <ItemGroup>
@@ -609,7 +609,9 @@
   <ItemGroup>
     <Content Include="Areas\HelpPage\Views\Help\Documentation.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="authentication.config" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bower_components\kartverket-felleskomponenter\.bower.json" />
     <Content Include="Content\bower_components\kartverket-felleskomponenter\assets\fonts\702ZOKiLJc3WVjuplzInF5uFdDttMLvmWuJdhhgs.ttf" />
