--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -51,6 +51,7 @@
     <add key="WebmasterEmail" value="post@norgedigitalt.no" />
     <add key="SmtpHost" value="smtp.altibox.no" />
     <add key="EnvironmentName" value="dev" />
+    <add key="SupportsMultiCulture" value="true" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
