Implement version 3 of API

--- a/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
+++ b/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
@@ -245,8 +245,10 @@
     <Compile Include="Controllers\Api\Internal\ManageOrderController.cs" />
     <Compile Include="Controllers\Api\V2\CapabilitiesV2Controller.cs" />
     <Compile Include="Controllers\Api\V2\DownloadController.cs" />
+    <Compile Include="Controllers\Api\V2\OrderMapper.cs" />
     <Compile Include="Controllers\Api\V2\OrderV2Controller.cs" />
     <Compile Include="Controllers\Api\V3\CapabilitiesV3Controller.cs" />
+    <Compile Include="Controllers\Api\V3\OrderV3Controller.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\Api\Internal\DatasetController.cs" />
