--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -47,6 +47,7 @@
     <add key="RegistryUrl" value="http://register.dev.geonorge.no/" />
     <add key="FmeAreaChecker" value="http://testnedlasting.geonorge.no/fmedatastreaming/Util/AreaChecker.fmw?" />
     <add key="FmeAreaCheckerEnabled" value="true" />
+    <add key="OrderBundleServiceUrl" value="http://testnedlasting.geonorge.no/fmedatadownload/Orders/FilePacker.fmw"/>
     <add key="KartkatalogenUrl" value="//kartkatalog.dev.geonorge.no/" />
     <add key="WebmasterEmail" value="post@norgedigitalt.no" />
     <add key="SmtpHost" value="smtp.altibox.no" />
