--- a/Kartverket.Geonorge.Download.Tests/Kartverket.Geonorge.Download.Tests.csproj
+++ b/Kartverket.Geonorge.Download.Tests/Kartverket.Geonorge.Download.Tests.csproj
@@ -146,6 +146,7 @@
     <Compile Include="MvcMockHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CapabilitiesServiceTest.cs" />
+    <Compile Include="Services\OrderBundleServiceTest.cs" />
     <Compile Include="Services\OrderServiceTest.cs" />
     <Compile Include="Services\UpdateFileStatusServiceTest.cs" />
   </ItemGroup>
