--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -43,7 +43,7 @@
   <appSettings>
     <add key="BuildVersionNumber" value="3.1" />
     <add key="GeonorgeUrl" value="//www.test.geonorge.no/" />
-    <add key="DownloadUrl" value="http://nedlasting.dev.geonorge.no/" />
+    <add key="DownloadUrl" value="http://localhost:61236/" />
     <add key="RegistryUrl" value="http://register.dev.geonorge.no/" />
     <add key="FmeAreaChecker" value="http://testnedlasting.geonorge.no/fmedatastreaming/Util/AreaChecker.fmw?" />
     <add key="FmeAreaCheckerEnabled" value="true" />
