Add DistributedBy field in capabilities

--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -41,6 +41,7 @@
     </appender>
   </log4net>
   <appSettings>
+    <add key="DistributedBy" value="Geonorge" />
     <add key="BuildVersionNumber" value="3.1" />
     <add key="GeonorgeUrl" value="//www.test.geonorge.no/" />
     <add key="DownloadUrl" value="http://localhost:61236/" />
