--- a/Kartverket.Geonorge.Download/Web.Test.config
+++ b/Kartverket.Geonorge.Download/Web.Test.config
@@ -4,8 +4,8 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <kentor.authServices
-  entityId="http://nedlasting.test.geonorge.no"
-  returnUrl="http://nedlasting.test.geonorge.no"
+  entityId="https://nedlasting.test.geonorge.no"
+  returnUrl="https://nedlasting.test.geonorge.no"
   xdt:Transform="Replace">
     <identityProviders>
       <add entityId="https://testidp.statkart.no/simplesaml/saml2/idp/metadata.php" signOnUrl="https://testidp.statkart.no/simplesaml/saml2/idp/SSOService.php" binding="HttpRedirect" allowUnsolicitedAuthnResponse="false" logoutUrl="https://testidp.statkart.no/simplesaml/saml2/idp/SingleLogoutService.php">
