--- a/Kartverket.Geonorge.Download/packages.config
+++ b/Kartverket.Geonorge.Download/packages.config
@@ -32,6 +32,7 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="OctoPack" version="3.4.2" targetFramework="net45" developmentDependency="true" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="ScottBrady91.AspNet.Identity.ConfigurablePasswordHasher" version="1.0.0" targetFramework="net452" />
   <package id="WebApi.BasicAuth" version="0.3.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
