Add Baat authorization filter

--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -64,7 +64,10 @@
       </system.Web>
   -->
   <system.web>
-    <customErrors mode="Off" />
+    <customErrors mode="Off" defaultRedirect="~/Error/">
+      <error statusCode="404" redirect="~/Error/NotFound/" />
+      <error statusCode="401" redirect="~/Error/Unauthorized/" />
+    </customErrors>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5" enableVersionHeader="false" />
@@ -112,7 +115,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
