--- a/Kartverket.Geonorge.Download/Web.config
+++ b/Kartverket.Geonorge.Download/Web.config
@@ -40,7 +40,7 @@
       </layout>
     </appender>
   </log4net>
-  <appSettings>
+  <appSettings file="settings.config">
     <add key="HttpTimeout" value="60" />
     <add key="BundlingEnabled" value="true" />
     <add key="DistributedBy" value="Geonorge" />
