--- a/Kartverket.Geonorge.Download.Tests/Kartverket.Geonorge.Download.Tests.csproj
+++ b/Kartverket.Geonorge.Download.Tests/Kartverket.Geonorge.Download.Tests.csproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <Compile Include="Controllers\Api\Internal\OrderControllerTest.cs" />
     <Compile Include="Controllers\Api\V2\DownloadControllerTest.cs" />
+    <Compile Include="Controllers\Api\V3\FileDownloadControllerTest.cs" />
     <Compile Include="Controllers\RequireHttpsNonLocalTest.cs" />
     <Compile Include="Models\OrderTest.cs" />
     <Compile Include="MvcMockHelper.cs" />
