--- a/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
+++ b/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -257,7 +257,13 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\Api\ApiDescriptionController.cs" />
+    <Compile Include="Controllers\Api\Internal\DownloadUsageController.cs" />
     <Compile Include="Controllers\Api\V3\FileDownloadController.cs" />
+    <Compile Include="Helpers\NonPublicColumnAttributeConvention.cs" />
+    <Compile Include="Migrations\201810220856029_AddDownloadUsage.cs" />
+    <Compile Include="Migrations\201810220856029_AddDownloadUsage.Designer.cs">
+      <DependentUpon>201810220856029_AddDownloadUsage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\DownloadUsage.cs" />
     <Compile Include="Models\UpdateMetadataInformation.cs" />
     <Compile Include="Services\FileService.cs" />
@@ -704,6 +710,9 @@
     <EmbeddedResource Include="Migrations\201801181918479_AddMachineAccount.resx">
       <DependentUpon>201801181918479_AddMachineAccount.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810220856029_AddDownloadUsage.resx">
+      <DependentUpon>201810220856029_AddDownloadUsage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\UI.en.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>UI.en.Designer.cs</LastGenOutput>
@@ -807,6 +816,9 @@
     <Content Include="dist\maps\main.js.map" />
     <Content Include="dist\maps\vendor.css.map" />
     <Content Include="dist\maps\vendor.js.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
