--- a/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
+++ b/Kartverket.Geonorge.Download/Kartverket.Geonorge.Download.csproj
@@ -264,6 +264,14 @@
     <Compile Include="Migrations\201810220856029_AddDownloadUsage.Designer.cs">
       <DependentUpon>201810220856029_AddDownloadUsage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201810260916074_AddMoreFieldsToDownloadUsage.cs" />
+    <Compile Include="Migrations\201810260916074_AddMoreFieldsToDownloadUsage.Designer.cs">
+      <DependentUpon>201810260916074_AddMoreFieldsToDownloadUsage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810260928254_AddRequestIdToDownloadUsageEntry.cs" />
+    <Compile Include="Migrations\201810260928254_AddRequestIdToDownloadUsageEntry.Designer.cs">
+      <DependentUpon>201810260928254_AddRequestIdToDownloadUsageEntry.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\DownloadUsage.cs" />
     <Compile Include="Models\UpdateMetadataInformation.cs" />
     <Compile Include="Services\FileService.cs" />
@@ -712,6 +720,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201810220856029_AddDownloadUsage.resx">
       <DependentUpon>201810220856029_AddDownloadUsage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810260916074_AddMoreFieldsToDownloadUsage.resx">
+      <DependentUpon>201810260916074_AddMoreFieldsToDownloadUsage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810260928254_AddRequestIdToDownloadUsageEntry.resx">
+      <DependentUpon>201810260928254_AddRequestIdToDownloadUsageEntry.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\UI.en.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
