--- a/Kartverket.Geonorge.Download/settings.default.config
+++ b/Kartverket.Geonorge.Download/settings.default.config
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <appSettings>
-  <add key="GeoNetworkUrl" value="http://www.geonorge.no/geonetworkbeta/" />
-  <add key="GeoNetworkUsername" value="" />
-  <add key="GeoNetworkPassword" value="" />
-  <add key="GeonorgeUsername" value="" />
+  <add key="ExternalClientTokenSecret" value="" />
 </appSettings>
