--- a/Kartverket.Geonorge.Download/settings.default.config
+++ b/Kartverket.Geonorge.Download/settings.default.config
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <appSettings>
-  <add key="ExternalClientTokenSecret" value="" />
+  <add key="ExternalClientToken" value="" />
 </appSettings>
